kustomize/frolf-backend/base/runtime/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frolf-bot-backend
  labels:
    app.kubernetes.io/component: api
spec:
  selector:
    app: frolf-bot-backend
    app.kubernetes.io/component: api
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
